# ral-bacswn-titan

./: .gitignore
src/apps/DataMapper/: CMakeLists.txt  Main.cc  Makefile  Params.cc  Params.hh  README.md
src/apps/DataMapper/test/: usage_truth.txt
src/apps/DsMdvServer/: CMakeLists.txt  Derived.cc  HandleMdvx.cc  Main.cc  Makefile  Params.cc  README.md  paramdef.DsMdvServer
src/apps/DsMdvServer/test/: usage_truth.txt
src/apps/GridForecast/: CMakeLists.txt  GridForecast.cc  GridForecast.hh  Main.cc  Makefile  Params.cc  Params.hh  README.md  paramdef.GridForecast
src/apps/MdvMerge2/: .gitignore  Args.cc  CMakeLists.txt  Makefile  MdvMerge2.GOES-East_cloudHt  MdvMerge2.GTG_merge_CAT_MWTURB  MdvMerge2.Himawari_cloudHt  MdvMerge2.cc  MdvMerge2.gfs_0.25  MdvMerge2.hh  OutputFile.cc  Params.cc  Params.hh  README.md  XyLookup.hh  paramdef.MdvMerge2
src/apps/MdvMerge2/test/: usage_truth.txt
src/apps/Radx2Grid/: CMakeLists.txt  OutputMdv.cc  Params.cc  Params.hh  README.md
src/apps/RadxConvert/: CMakeLists.txt  Makefile  Params.cc  Params.hh  README.md  RadxConvert.params
src/apps/Titan/: CMakeLists.txt  README.md
src/apps/Tstorms2Symprod/: CMakeLists.txt  README.md
src/apps/ctrec/: CMakeLists.txt  Ctrec.cc  Ctrec.hh  CtrecAlg.cc  CtrecAlg.hh  DiffTemporalSmoother.cc  Main.cc  Makefile  Params.cc  Params.hh  README.md  SimpleGrid.hh  paramdef.ctrec
src/apps/print_procmap/: CMakeLists.txt  Main.cc  Makefile  README.md
src/apps/procmap/: CMakeLists.txt  Main.cc  README.md
src/apps/tdrp_gen/: CMakeLists.txt  Makefile  README.md  write_c++_files.c
src/libs/Fmq/: CMakeLists.txt  README.md
src/libs/Fmq/src/DrawQueue/: Makefile
src/libs/Fmq/src/DsFmq/: Makefile
src/libs/Fmq/src/DsRadarQueue/: Makefile
src/libs/Fmq/src/Fmq/: Makefile
src/libs/Fmq/src/GenericQueue/: Makefile
src/libs/Fmq/src/NowcastQueue/: Makefile
src/libs/Fmq/src/RemoteUIQueue/: Makefile
src/libs/GoesRNc/: CMakeLists.txt  README.md
src/libs/GoesRNc/src/: Makefile
src/libs/GoesRNc/src/Angles/: Angles.cc  Makefile
src/libs/GoesRNc/src/GoesRNcFile/: AerosolDetectionProduct.cc  AerosolOpticalDepthProduct.cc  ClearSkyMaskProduct.cc  CloudOpticalDepthProduct.cc  CloudParticleSizeProduct.cc  CloudTopHeightProduct.cc  CloudTopPhaseProduct.cc  CloudTopPressureProduct.cc  CloudTopTemperatureProduct.cc  DerivedStabilityIndicesProduct.cc  FireCharacterizationProduct.cc  GoesRProduct.cc  LandSurfaceTemperatureProduct.cc  LegacyVerticalMoistureProfileProduct.cc  LegacyVerticalTemperatureProfileProduct.cc  Makefile  RadianceProduct.cc  RainfallRateQpeProduct.cc  SeaSurfaceTemperatureProduct.cc  TotalPrecipitableWaterProduct.cc  VolcanicAshProduct.cc
src/libs/GoesRNc/src/Normalize/: Makefile  Normalize.cc
src/libs/GoesRNc/src/include/GoesRNc/: AerosolDetectionProduct.hh  AerosolOpticalDepthProduct.hh  Angles.hh  ClearSkyMaskProduct.hh  CloudOpticalDepthProduct.hh  CloudParticleSizeProduct.hh  CloudTopHeightProduct.hh  CloudTopPhaseProduct.hh  CloudTopPressureProduct.hh  CloudTopTemperatureProduct.hh  DerivedStabilityIndicesProduct.hh  FireCharacterizationProduct.hh  GoesRProduct.hh  LandSurfaceTemperatureProduct.hh  LegacyVerticalMoistureProfileProduct.hh  LegacyVerticalTemperatureProfileProduct.hh  Level2Products.hh  Normalize.hh  RadianceProduct.hh  RainfallRateQpeProduct.hh  SeaSurfaceTemperatureProduct.hh  TotalPrecipitableWaterProduct.hh  VolcanicAshProduct.hh
src/libs/Mdv/: CMakeLists.txt  README.md
src/libs/Mdv/src/Mdvx/: Mdvx_print.cc  Mdvx_write.cc
src/libs/Mdv/src/MdvxField/: MdvxField.cc
src/libs/Mdv/src/MdvxProj/: MdvxProj.cc
src/libs/Mdv/src/NcfMdv/: Mdv2NcfTrans.cc  Ncf2MdvTrans.cc  NcfMdv.cc
src/libs/Mdv/src/include/Mdv/: NcfMdv.hh
src/libs/Ncxx/: CMakeLists.txt  README.md
src/libs/Radx/: CMakeLists.txt  README.md
src/libs/Spdb/: CMakeLists.txt  README.md
src/libs/advect/: CMakeLists.txt  README.md
src/libs/advect/src/GridAdvect/: GridAdvect.cc  VectorsAdvector.cc
src/libs/advect/src/include/advect/: Advector.hh  GridAdvect.hh  SoundingAdvector.hh  VectorsAdvector.hh
src/libs/dataport/: CMakeLists.txt  README.md
src/libs/didss/: CMakeLists.txt  README.md
src/libs/didss/src/DataFileNames/: .gitignore  Makefile
src/libs/dsdata/: CMakeLists.txt  README.md
src/libs/dsserver/: CMakeLists.txt  README.md
src/libs/dsserver/src/DataMapper/: Makefile
src/libs/dsserver/src/DestUrlArray/: Makefile
src/libs/dsserver/src/DsFileCopy/: Makefile
src/libs/dsserver/src/DsFileIo/: Makefile
src/libs/dsserver/src/DsLocator/: Makefile
src/libs/euclid/: CMakeLists.txt  README.md
src/libs/euclid/src/Attributes/: AttributesEuclid.cc  MotionVector.cc
src/libs/euclid/src/Pjg/: .gitignore  Makefile  Pjg.cc  PjgCalc.cc
src/libs/euclid/src/include/euclid/: Grid2dOffset.hh  LineList.hh  Pjg.hh  PjgCalc.hh
src/libs/grib2/: CMakeLists.txt  README.md
src/libs/grib2/src/grib2/: DRS.cc  DS.cc  GDS.cc  Grib2File.cc  Grib2Record.cc  IdSec.cc  Makefile  PDS.cc  ProdDefTemp.cc  Template4.0.cc  Template4.1.cc  Template4.10.cc  Template4.11.cc  Template4.12.cc  Template4.15.cc  Template4.2.cc  Template4.30.cc  Template4.31.cc  Template4.32.cc  Template4.33.cc  Template4.34.cc  Template4.35.cc  Template4.40.cc  Template4.41.cc  Template4.42.cc  Template4.43.cc  Template4.44.cc  Template4.45.cc  Template4.46.cc  Template4.47.cc  Template4.48.cc  Template4.49.cc  Template4.5.cc  Template4.6.cc  Template4.7.cc  Template4.8.cc  Template4.9.cc  Template5.4.cc  Template5.42.cc  Template5.61.cc  (+2 more)
src/libs/grib2/src/include/grib2/: DRS.hh  DS.hh  DataRepTemp.hh  (+25 more)
src/libs/physics/: CMakeLists.txt  README.md
src/libs/rapformats/: CMakeLists.txt  README.md
src/libs/rapformats/src/metar/: dcdmetar.c
src/libs/rapformats/src/nws_wwa/: NWS_WWA.cc
src/libs/rapformats/src/station_data/: WxObs.cc
src/libs/rapmath/: CMakeLists.txt  README.md
src/libs/rapmath/src/functions/: ParamsFuzzyFunction.cc
src/libs/rapmath/src/mathparse/: Makefile
src/libs/rapmath/src/umath/: .gitignore
src/libs/symprod/: CMakeLists.txt  README.md
src/libs/tdrp/: CMakeLists.txt  README.md
(+994 files in other folders)
