set(SOURCE_FILES
    src/include/GoesRNc/AerosolDetectionProduct.hh
    src/include/GoesRNc/AerosolOpticalDepthProduct.hh
    src/include/GoesRNc/Angles.hh
    src/include/GoesRNc/ClearSkyMaskProduct.hh
    src/include/GoesRNc/CloudOpticalDepthProduct.hh
    src/include/GoesRNc/CloudParticleSizeProduct.hh
    src/include/GoesRNc/CloudTopHeightProduct.hh
    src/include/GoesRNc/CloudTopPhaseProduct.hh
    src/include/GoesRNc/CloudTopPressureProduct.hh
    src/include/GoesRNc/CloudTopTemperatureProduct.hh
    src/include/GoesRNc/DerivedStabilityIndicesProduct.hh
    src/include/GoesRNc/FireCharacterizationProduct.hh
    src/include/GoesRNc/GoesRProduct.hh
    src/include/GoesRNc/LandSurfaceTemperatureProduct.hh
    src/include/GoesRNc/LegacyVerticalMoistureProfileProduct.hh
    src/include/GoesRNc/LegacyVerticalTemperatureProfileProduct.hh
    src/include/GoesRNc/Level2Products.hh
    src/include/GoesRNc/Normalize.hh
    src/include/GoesRNc/RadianceProduct.hh
    src/include/GoesRNc/RainfallRateQpeProduct.hh
    src/include/GoesRNc/SeaSurfaceTemperatureProduct.hh
    src/include/GoesRNc/TotalPrecipitableWaterProduct.hh
    src/include/GoesRNc/VolcanicAshProduct.hh
    src/Angles/Angles.cc
    src/GoesRNcFile/AerosolDetectionProduct.cc
    src/GoesRNcFile/AerosolOpticalDepthProduct.cc
    src/GoesRNcFile/ClearSkyMaskProduct.cc
    src/GoesRNcFile/CloudOpticalDepthProduct.cc
    src/GoesRNcFile/CloudParticleSizeProduct.cc
    src/GoesRNcFile/CloudTopHeightProduct.cc
    src/GoesRNcFile/CloudTopPhaseProduct.cc
    src/GoesRNcFile/CloudTopPressureProduct.cc
    src/GoesRNcFile/CloudTopTemperatureProduct.cc
    src/GoesRNcFile/DerivedStabilityIndicesProduct.cc
    src/GoesRNcFile/FireCharacterizationProduct.cc
    src/GoesRNcFile/GoesRProduct.cc
    src/GoesRNcFile/LandSurfaceTemperatureProduct.cc
    src/GoesRNcFile/LegacyVerticalMoistureProfileProduct.cc
    src/GoesRNcFile/LegacyVerticalTemperatureProfileProduct.cc
    src/GoesRNcFile/RadianceProduct.cc
    src/GoesRNcFile/RainfallRateQpeProduct.cc
    src/GoesRNcFile/SeaSurfaceTemperatureProduct.cc
    src/GoesRNcFile/TotalPrecipitableWaterProduct.cc
    src/GoesRNcFile/VolcanicAshProduct.cc
    src/Normalize/Normalize.cc
    )

add_library(GoesRNc ${SOURCE_FILES})
