set(SOURCE_FILES
        src/include/Mdv/climo/ClimoFileFinder.hh
        src/include/Mdv/climo/DailyByYearFileFinder.hh
        src/include/Mdv/climo/DailyFileFinder.hh
        src/include/Mdv/climo/ExternalDiurnalFileFinder.hh
        src/include/Mdv/climo/HourlyByMonthFileFinder.hh
        src/include/Mdv/climo/HourlyByYearFileFinder.hh
        src/include/Mdv/climo/HourlyDiurnalFileFinder.hh
        src/include/Mdv/climo/HourlyFileFinder.hh
        src/include/Mdv/climo/MaxDateStatCalc.hh
        src/include/Mdv/climo/MaxStatCalc.hh
        src/include/Mdv/climo/MeanStatCalc.hh
        src/include/Mdv/climo/MinDateStatCalc.hh
        src/include/Mdv/climo/MinStatCalc.hh
        src/include/Mdv/climo/MonthlyByYearFileFinder.hh
        src/include/Mdv/climo/MonthlyFileFinder.hh
        src/include/Mdv/climo/NumObsGEStatCalc.hh
        src/include/Mdv/climo/NumObsGTStatCalc.hh
        src/include/Mdv/climo/NumObsLEStatCalc.hh
        src/include/Mdv/climo/NumObsLTStatCalc.hh
        src/include/Mdv/climo/NumObsStatCalc.hh
        src/include/Mdv/climo/NumTimesStatCalc.hh
        src/include/Mdv/climo/PercentObsGEStatCalc.hh
        src/include/Mdv/climo/PercentObsGTStatCalc.hh
        src/include/Mdv/climo/PercentObsLEStatCalc.hh
        src/include/Mdv/climo/PercentObsLTStatCalc.hh
        src/include/Mdv/climo/PercentObsStatCalc.hh
        src/include/Mdv/climo/StatCalc.hh
        src/include/Mdv/climo/StatNamer.hh
        src/include/Mdv/climo/StdDevStatCalc.hh
        src/include/Mdv/climo/ThreeHourlyByMonthFileFinder.hh
        src/include/Mdv/climo/ThreeHourlyDiurnalFileFinder.hh
        src/include/Mdv/climo/TwoHourlyByMonthFileFinder.hh
        src/include/Mdv/climo/TwoHourlyByYearFileFinder.hh
        src/include/Mdv/climo/TwoHourlyDiurnalFileFinder.hh
        src/include/Mdv/mdv/Mdv.h
        src/include/Mdv/mdv/mdv_client.h
        src/include/Mdv/mdv/mdv_composite.h
        src/include/Mdv/mdv/mdv_convert.h
        src/include/Mdv/mdv/mdv_dataset.h
        src/include/Mdv/mdv/mdv_field_codes.h
        src/include/Mdv/mdv/mdv_field_handle.h
        src/include/Mdv/mdv/mdv_file.h
        src/include/Mdv/mdv/mdv_grid.h
        src/include/Mdv/mdv/mdv_handle.h
        src/include/Mdv/mdv/mdv_macros.h
        src/include/Mdv/mdv/mdv_msgs.h
        src/include/Mdv/mdv/mdv_print.h
        src/include/Mdv/mdv/mdv_radar.h
        src/include/Mdv/mdv/mdv_read.h
        src/include/Mdv/mdv/mdv_service.h
        src/include/Mdv/mdv/mdv_user.h
        src/include/Mdv/mdv/mdv_utils.h
        src/include/Mdv/mdv/mdv_write.h
        src/include/Mdv/mdv/MdvChunk.hh
        src/include/Mdv/mdv/MdvField.hh
        src/include/Mdv/mdv/MdvFile.hh
        src/include/Mdv/mdv/MdvInputPath.h
        src/include/Mdv/mdv/MdvMasterHdr.hh
        src/include/Mdv/mdv/MdvRead.hh
        src/include/Mdv/mdv/MdvReadChunk.hh
        src/include/Mdv/mdv/MdvReadField.hh
        src/include/Mdv/mdv/MdvReadRadar.hh
        src/include/Mdv/mdv/MdvVlevel.hh
        src/include/Mdv/mdv/MdvVsection.hh
        src/include/Mdv/mdv/MdvVsectionField.hh
        src/include/Mdv/mdv/TimestampChunk.hh
        src/include/Mdv/DsMdvx.hh
        src/include/Mdv/DsMdvxInput.hh
        src/include/Mdv/DsMdvxMsg.hh
        src/include/Mdv/DsMdvxThreaded.hh
        src/include/Mdv/DsMdvxTimes.hh
        src/include/Mdv/GenericRadxFile.hh
        src/include/Mdv/GenPolyGrid.hh
        src/include/Mdv/Mdv2NcfTrans.hh
        src/include/Mdv/MdvRadxFile.hh
        src/include/Mdv/Mdvx.hh
        src/include/Mdv/Mdvx_BE.hh
        src/include/Mdv/Mdvx_constants.hh
        src/include/Mdv/Mdvx_enums.hh
        src/include/Mdv/Mdvx_ncf.hh
        src/include/Mdv/Mdvx_print.hh
        src/include/Mdv/Mdvx_read.hh
        src/include/Mdv/Mdvx_timelist.hh
        src/include/Mdv/Mdvx_typedefs.hh
        src/include/Mdv/Mdvx_typedefs_32.hh
        src/include/Mdv/Mdvx_typedefs_64.hh
        src/include/Mdv/Mdvx_vsect.hh
        src/include/Mdv/Mdvx_write.hh
        src/include/Mdv/Mdvx_xml.hh
        src/include/Mdv/MdvxChunk.hh
        src/include/Mdv/MdvxContour.hh
        src/include/Mdv/MdvxField.hh
        src/include/Mdv/MdvxFieldCode.hh
        src/include/Mdv/MdvxGrid.hh
        src/include/Mdv/MdvxPjg.hh
        src/include/Mdv/MdvxProj.hh
        src/include/Mdv/MdvxRadar.hh
        src/include/Mdv/MdvxRemapLut.hh
        src/include/Mdv/MdvxStdAtmos.hh
        src/include/Mdv/MdvxTimeList.hh
        src/include/Mdv/MdvxTimeStamp.hh
        src/include/Mdv/MdvxUrlWatcher.hh
        src/include/Mdv/MdvxVsectLut.hh
        src/include/Mdv/Ncf2MdvField.hh
        src/include/Mdv/Ncf2MdvTrans.hh
        src/include/Mdv/NcfFieldData.hh
        src/include/Mdv/NcfGridInfo.hh
        src/include/Mdv/NcfMdv.hh
        src/include/Mdv/NcfVlevelInfo.hh
        src/ClimoFileFinder/ClimoFileFinder.cc
        src/ClimoFileFinder/DailyByYearFileFinder.cc
        src/ClimoFileFinder/DailyFileFinder.cc
        src/ClimoFileFinder/ExternalDiurnalFileFinder.cc
        src/ClimoFileFinder/HourlyByMonthFileFinder.cc
        src/ClimoFileFinder/HourlyByYearFileFinder.cc
        src/ClimoFileFinder/HourlyDiurnalFileFinder.cc
        src/ClimoFileFinder/HourlyFileFinder.cc
        src/ClimoFileFinder/MonthlyByYearFileFinder.cc
        src/ClimoFileFinder/MonthlyFileFinder.cc
        src/ClimoFileFinder/ThreeHourlyByMonthFileFinder.cc
        src/ClimoFileFinder/ThreeHourlyDiurnalFileFinder.cc
        src/ClimoFileFinder/TwoHourlyByMonthFileFinder.cc
        src/ClimoFileFinder/TwoHourlyByYearFileFinder.cc
        src/ClimoFileFinder/TwoHourlyDiurnalFileFinder.cc
        src/ClimoStatCalc/MaxDateStatCalc.cc
        src/ClimoStatCalc/MaxStatCalc.cc
        src/ClimoStatCalc/MeanStatCalc.cc
        src/ClimoStatCalc/MinDateStatCalc.cc
        src/ClimoStatCalc/MinStatCalc.cc
        src/ClimoStatCalc/NumObsGEStatCalc.cc
        src/ClimoStatCalc/NumObsGTStatCalc.cc
        src/ClimoStatCalc/NumObsLEStatCalc.cc
        src/ClimoStatCalc/NumObsLTStatCalc.cc
        src/ClimoStatCalc/NumObsStatCalc.cc
        src/ClimoStatCalc/NumTimesStatCalc.cc
        src/ClimoStatCalc/PercentObsGEStatCalc.cc
        src/ClimoStatCalc/PercentObsGTStatCalc.cc
        src/ClimoStatCalc/PercentObsLEStatCalc.cc
        src/ClimoStatCalc/PercentObsLTStatCalc.cc
        src/ClimoStatCalc/PercentObsStatCalc.cc
        src/ClimoStatCalc/StatCalc.cc
        src/ClimoStatCalc/StatNamer.cc
        src/ClimoStatCalc/StdDevStatCalc.cc
        src/DsMdvx/DsMdvx.cc
        src/DsMdvx/DsMdvxInput.cc
        src/DsMdvx/DsMdvxMsg.cc
        src/DsMdvx/DsMdvxThreaded.cc
        src/DsMdvx/DsMdvxTimes.cc
        src/DsMdvx/msg_add.cc
        src/DsMdvx/msg_assemble.cc
        src/DsMdvx/msg_disassemble.cc
        src/DsMdvx/msg_get.cc
        src/DsMdvx/msg_print.cc
        src/Mdvx/Mdvx.cc
        src/Mdvx/Mdvx_BE.cc
        src/Mdvx/Mdvx_ncf.cc
        src/Mdvx/Mdvx_print.cc
        src/Mdvx/Mdvx_read.cc
        src/Mdvx/Mdvx_timelist.cc
        src/Mdvx/Mdvx_vsect.cc
        src/Mdvx/Mdvx_write.cc
        src/Mdvx/Mdvx_xml.cc
        src/MdvxChunk/MdvxChunk.cc
        src/MdvxContour/MdvxContour.cc
        src/MdvxField/MdvxField.cc
        src/MdvxField/MdvxFieldCode.cc
        src/MdvxField/MdvxStdAtmos.cc
        src/MdvxGrid/MdvxGrid.cc
        src/MdvxProj/GenPolyGrid.cc
        src/MdvxProj/MdvxPjg.cc
        src/MdvxProj/MdvxProj.cc
        src/MdvxRadar/MdvxRadar.cc
        src/MdvxRemapLut/MdvxRemapLut.cc
        src/MdvxTimeList/MdvxTimeList.cc
        src/MdvxTimeStamp/MdvxTimeStamp.cc
        src/MdvxUrlWatcher/MdvxUrlWatcher.cc
        src/MdvxVsectLut/MdvxVsectLut.cc
        src/NcfMdv/Mdv2NcfTrans.cc
        src/NcfMdv/Ncf2MdvField.cc
        src/NcfMdv/Ncf2MdvTrans.cc
        src/NcfMdv/NcfFieldData.cc
        src/NcfMdv/NcfGridInfo.cc
        src/NcfMdv/NcfMdv.cc
        src/NcfMdv/NcfVlevelInfo.cc
        src/oldMdv/mdv_chunk.c
        src/oldMdv/mdv_client.c
        src/oldMdv/mdv_composite.c
        src/oldMdv/mdv_convert.c
        src/oldMdv/mdv_dataset.c
        src/oldMdv/mdv_field_handle.c
        src/oldMdv/mdv_grid.c
        src/oldMdv/mdv_handle.c
        src/oldMdv/mdv_print.c
        src/oldMdv/mdv_print_f.c
        src/oldMdv/mdv_private.h
        src/oldMdv/mdv_private_f.c
        src/oldMdv/mdv_private_f.h
        src/oldMdv/mdv_proj.c
        src/oldMdv/mdv_radar.c
        src/oldMdv/mdv_read.c
        src/oldMdv/mdv_read_f.c
        src/oldMdv/mdv_user.c
        src/oldMdv/mdv_utils.c
        src/oldMdv/mdv_write.c
        src/oldMdv/mdv_write_f.c
        src/oldMdv/MdvChunk.cc
        src/oldMdv/MdvField.cc
        src/oldMdv/MdvFieldData.cc
        src/oldMdv/MdvFile.cc
        src/oldMdv/MdvGrid.cc
        src/oldMdv/MdvInputPath.cc
        src/oldMdv/MdvMasterHdr.cc
        src/oldMdv/MdvPublic.cc
        src/oldMdv/MdvRead.cc
        src/oldMdv/MdvReadChunk.cc
        src/oldMdv/MdvReadField.cc
        src/oldMdv/MdvReadRadar.cc
        src/oldMdv/MdvVlevel.cc
        src/oldMdv/MdvVsection.cc
        src/oldMdv/MdvVsectionField.cc
        src/oldMdv/print_grid.c
        src/oldMdv/TimestampChunk.cc
        src/Radx/GenericRadxFile.cc
        src/Radx/MdvRadxFile.cc
)
add_library(Mdv ${SOURCE_FILES})
target_include_directories(Mdv PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/rapformats/src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/euclid/src/include
        ${CMAKE_SOURCE_DIR}/libs/didss/src/include
        ${CMAKE_SOURCE_DIR}/libs/Ncxx/src/include
        ${CMAKE_SOURCE_DIR}/libs/dsserver/src/include
        ${CMAKE_SOURCE_DIR}/libs/Radx/src/include
)
