set(SOURCE_FILES
        src/include/Ncxx/ByteOrder.hh
        src/include/Ncxx/Hdf5xx.hh
        src/include/Ncxx/Nc3File.hh
        src/include/Ncxx/Nc3Values.hh
        src/include/Ncxx/Nc3xFile.hh
        src/include/Ncxx/Ncxx.hh
        src/include/Ncxx/NcxxAtt.hh
        src/include/Ncxx/NcxxByte.hh
        src/include/Ncxx/NcxxChar.hh
        src/include/Ncxx/NcxxCheck.hh
        src/include/Ncxx/NcxxCompoundType.hh
        src/include/Ncxx/NcxxDim.hh
        src/include/Ncxx/NcxxDouble.hh
        src/include/Ncxx/NcxxEnumType.hh
        src/include/Ncxx/NcxxErrStr.hh
        src/include/Ncxx/NcxxException.hh
        src/include/Ncxx/NcxxFile.hh
        src/include/Ncxx/NcxxFloat.hh
        src/include/Ncxx/NcxxGroup.hh
        src/include/Ncxx/NcxxGroupAtt.hh
        src/include/Ncxx/NcxxInt.hh
        src/include/Ncxx/NcxxInt64.hh
        src/include/Ncxx/NcxxOpaqueType.hh
        src/include/Ncxx/NcxxPort.hh
        src/include/Ncxx/NcxxShort.hh
        src/include/Ncxx/NcxxString.hh
        src/include/Ncxx/NcxxType.hh
        src/include/Ncxx/NcxxUbyte.hh
        src/include/Ncxx/NcxxUint.hh
        src/include/Ncxx/NcxxUint64.hh
        src/include/Ncxx/NcxxUshort.hh
        src/include/Ncxx/NcxxVar.hh
        src/include/Ncxx/NcxxVarAtt.hh
        src/include/Ncxx/NcxxVlenType.hh
        src/include/Ncxx/Udunits2.hh
        src/DataPort/ByteOrder.cc
        src/DataPort/NcxxPort.cc
        src/Hdf5/Hdf5xx.cc
        src/Nc3x/Nc3File.cc
        src/Nc3x/Nc3Values.cc
        src/Nc3x/Nc3xFile.cc
        src/Ncxx/Ncxx.cc
        src/Ncxx/NcxxAtt.cc
        src/Ncxx/NcxxByte.cc
        src/Ncxx/NcxxChar.cc
        src/Ncxx/NcxxCheck.cc
        src/Ncxx/NcxxCompoundType.cc
        src/Ncxx/NcxxDim.cc
        src/Ncxx/NcxxDouble.cc
        src/Ncxx/NcxxEnumType.cc
        src/Ncxx/NcxxErrStr.cc
        src/Ncxx/NcxxException.cc
        src/Ncxx/NcxxFile.cc
        src/Ncxx/NcxxFloat.cc
        src/Ncxx/NcxxGroup.cc
        src/Ncxx/NcxxGroupAtt.cc
        src/Ncxx/NcxxInt.cc
        src/Ncxx/NcxxInt64.cc
        src/Ncxx/NcxxOpaqueType.cc
        src/Ncxx/NcxxShort.cc
        src/Ncxx/NcxxString.cc
        src/Ncxx/NcxxType.cc
        src/Ncxx/NcxxUbyte.cc
        src/Ncxx/NcxxUint.cc
        src/Ncxx/NcxxUint64.cc
        src/Ncxx/NcxxUshort.cc
        src/Ncxx/NcxxVar.cc
        src/Ncxx/NcxxVarAtt.cc
        src/Ncxx/NcxxVlenType.cc
        src/Udunits/Udunits2.cc
)
add_library(Ncxx ${SOURCE_FILES})
target_include_directories(Ncxx PUBLIC
        ./src/include
)