set(SOURCE_FILES
        src/include/Radx/BufrFile.hh
        src/include/Radx/BufrProduct.hh
        src/include/Radx/BufrRadxFile.hh
        src/include/Radx/ByteOrder.hh
        src/include/Radx/Cf2RadxFile.hh
        src/include/Radx/CfarrNcRadxFile.hh
        src/include/Radx/D3rNcRadxFile.hh
        src/include/Radx/DoeNcRadxFile.hh
        src/include/Radx/DoradeData.hh
        src/include/Radx/DoradeRadxFile.hh
        src/include/Radx/EdgeNcRadxFile.hh
        src/include/Radx/ForayNcRadxFile.hh
        src/include/Radx/GamicHdf5RadxFile.hh
        src/include/Radx/GemRadxFile.hh
        src/include/Radx/Hdf5Utils.hh
        src/include/Radx/HrdData.hh
        src/include/Radx/HrdRadxFile.hh
        src/include/Radx/LeoRadxFile.hh
        src/include/Radx/NcfRadxFile.hh
        src/include/Radx/NcxxRadxFile.hh
        #src/include/Radx/NetcdfClassic.hh
        #src/include/Radx/NetcdfCxxUtils.hh
        src/include/Radx/NexradCmdRadxFile.hh
        src/include/Radx/NexradData.hh
        src/include/Radx/NexradLoc.hh
        src/include/Radx/NexradRadxFile.hh
        src/include/Radx/NexradVcp.hh
        src/include/Radx/NidsData.hh
        src/include/Radx/NidsRadxFile.hh
        src/include/Radx/NoaaFslRadxFile.hh
        src/include/Radx/NoxpNcRadxFile.hh
        src/include/Radx/NsslMrdRadxFile.hh
        src/include/Radx/OdimHdf5RadxFile.hh
        src/include/Radx/PseudoRhi.hh
        src/include/Radx/Radx.hh
        src/include/Radx/RadxAngleHist.hh
        src/include/Radx/RadxArray.hh
        src/include/Radx/RadxAzElev.hh
        src/include/Radx/RadxBuf.hh
        src/include/Radx/RadxCfactors.hh
        src/include/Radx/RadxComplex.hh
        src/include/Radx/RadxEvent.hh
        src/include/Radx/RadxField.hh
        src/include/Radx/RadxFile.hh
        src/include/Radx/RadxFuzzy2d.hh
        src/include/Radx/RadxFuzzyF.hh
        src/include/Radx/RadxGeoref.hh
        src/include/Radx/RadxMsg.hh
        src/include/Radx/RadxNcfStr.hh
        src/include/Radx/RadxPacking.hh
        src/include/Radx/RadxPath.hh
        src/include/Radx/RadxPlatform.hh
        src/include/Radx/RadxRangeGeom.hh
        src/include/Radx/RadxRay.hh
        src/include/Radx/RadxRcalib.hh
        src/include/Radx/RadxReadDir.hh
        src/include/Radx/RadxRemap.hh
        src/include/Radx/RadxStr.hh
        src/include/Radx/RadxSweep.hh
        src/include/Radx/RadxTime.hh
        src/include/Radx/RadxTimeList.hh
        src/include/Radx/RadxVol.hh
        src/include/Radx/RadxXml.hh
        src/include/Radx/RapicRadxFile.hh
        src/include/Radx/RayxData.hh
        src/include/Radx/RayxMapping.hh
        src/include/Radx/SigmetData.hh
        src/include/Radx/SigmetRadxFile.hh
        src/include/Radx/TableMap.hh
        src/include/Radx/TableMapElement.hh
        src/include/Radx/TableMapKey.hh
        src/include/Radx/TdwrLoc.hh
        src/include/Radx/TdwrRadxFile.hh
        src/include/Radx/TwolfRadxFile.hh
        src/include/Radx/Udunits2.hh
        src/include/Radx/UfData.hh
        src/include/Radx/UfRadxFile.hh
        src/Bufr/BufrFile.cc
        src/Bufr/BufrProduct.cc
        src/Bufr/BufrProduct_204_31_X.cc
        src/Bufr/BufrProduct_204_31_X.hh
        src/Bufr/BufrProduct_gsi.cc
        src/Bufr/BufrProduct_gsi.hh
        src/Bufr/BufrProductGeneric.cc
        src/Bufr/BufrProductGeneric.hh
        src/Bufr/BufrRadxFile.cc
        src/Bufr/BufrTables.cc
        src/Bufr/BufrTables.hh
        src/Bufr/TableMap.cc
        src/Bufr/TableMapElement.cc
        src/Bufr/TableMapKey.cc
        src/Cf2/Cf2RadxFile.cc
        src/Cf2/Cf2RadxFile_read.cc
        src/Cf2/Cf2RadxFile_write.cc
        src/Cfarr/CfarrNcRadxFile.cc
        src/D3R/D3rNcRadxFile.cc
        src/DOE/DoeNcRadxFile.cc
        #src/Dorade/ddb_common.c
        src/Dorade/DoradeData.cc
        src/Dorade/DoradeRadxFile.cc
        src/EEC/EdgeNcRadxFile.cc
        src/ForayNc/ForayNcRadxFile.cc
        src/ForayNc/ForayNcRadxFile_read.cc
        src/ForayNc/ForayNcRadxFile_write.cc
        src/Gamic/GamicHdf5RadxFile.cc
        src/Gematronik/GemBlob.cc
        src/Gematronik/GemBlob.hh
        src/Gematronik/GemInputField.cc
        src/Gematronik/GemInputField.hh
        src/Gematronik/GemRadxFile.cc
        src/Gematronik/GemSweep.cc
        src/Gematronik/GemSweep.hh
        #src/hdf5/Hdf5Utils.cc
        #src/Hrd/HrdData.cc
        src/Hrd/HrdRadxFile.cc
        src/Leosphere/LeoRadxFile.cc
        src/Ncf/NcfRadxFile.cc
        src/Ncf/NcfRadxFile_read.cc
        src/Ncf/NcfRadxFile_write.cc
        src/Ncf/NcxxRadxFile.cc
        src/Ncf/NcxxRadxFile_read.cc
        src/Ncf/NcxxRadxFile_write.cc
        src/Ncf/RadxNcfStr.cc
        #src/netcdf/NetcdfClassic.cc
        #src/netcdf/NetcdfCxxUtils.cc
        #src/netcdf/Udunits2.cc
        src/Nexrad/NexradCmdRadxFile.cc
        src/Nexrad/NexradData.cc
        src/Nexrad/NexradLoc.cc
        src/Nexrad/NexradRadxFile.cc
        src/Nexrad/NexradVcp.cc
        src/Nexrad/NidsData.cc
        src/Nexrad/NidsRadxFile.cc
        src/NoaaFsl/NoaaFslRadxFile.cc
        src/Noxp/NoxpNcRadxFile.cc
        src/NsslMrd/NsslMrdRadxFile.cc
        #src/Odim/odimH5FileWriter.C
        #src/Odim/odimH5FileWriter.h
        src/Odim/OdimHdf5RadxFile.cc
        #src/Odim/rapic2ODIMH5.C
        #src/Odim/writeODIMH5.C
        src/Radx/ByteOrder.cc
        src/Radx/PseudoRhi.cc
        src/Radx/Radx.cc
        src/Radx/RadxAngleHist.cc
        src/Radx/RadxAzElev.cc
        src/Radx/RadxBuf.cc
        src/Radx/RadxCfactors.cc
        src/Radx/RadxComplex.cc
        src/Radx/RadxEvent.cc
        src/Radx/RadxField.cc
        src/Radx/RadxFile.cc
        src/Radx/RadxFuzzy2d.cc
        src/Radx/RadxFuzzyF.cc
        src/Radx/RadxGeoref.cc
        src/Radx/RadxMsg.cc
        src/Radx/RadxPacking.cc
        src/Radx/RadxPath.cc
        src/Radx/RadxPlatform.cc
        src/Radx/RadxRangeGeom.cc
        src/Radx/RadxRay.cc
        src/Radx/RadxRcalib.cc
        src/Radx/RadxReadDir.cc
        src/Radx/RadxRemap.cc
        src/Radx/RadxStr.cc
        src/Radx/RadxSweep.cc
        src/Radx/RadxTime.cc
        src/Radx/RadxTimeList.cc
        src/Radx/RadxVol.cc
        src/Radx/RadxXml.cc
        src/Radx/RayxData.cc
        src/Radx/RayxMapping.cc
        src/Rapic/Linebuff.cc
        src/Rapic/Linebuff.hh
        src/Rapic/PPIField.cc
        src/Rapic/PPIField.hh
        src/Rapic/RapicRadxFile.cc
        src/Rapic/RapicRay.cc
        src/Rapic/RapicRay.hh
        src/Rapic/ScanParams.cc
        src/Rapic/ScanParams.hh
        src/Rapic/sRadl.cc
        src/Rapic/sRadl.hh
        src/Sigmet/SigmetRadxFile.cc
        src/Tdwr/TdwrLoc.cc
        src/Tdwr/TdwrRadxFile.cc
        src/Twolf/TwolfRadxFile.cc
        src/Uf/UfData.cc
        src/Uf/UfRadxFile.cc
)
add_library(Radx ${SOURCE_FILES})
target_include_directories(Radx PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/Ncxx/src/include
)
