set(SOURCE_FILES
        src/include/Spdb/ConvRegionHazard.hh
        src/include/Spdb/ConvRegionHazardExt.hh
        src/include/Spdb/DsSpdb.hh
        src/include/Spdb/DsSpdbInput.hh
        src/include/Spdb/DsSpdbMsg.hh
        src/include/Spdb/DsSpdbServer.hh
        src/include/Spdb/DsSpdbThreaded.hh
        src/include/Spdb/DsSymprodServer.hh
        src/include/Spdb/FltRoute.hh
        src/include/Spdb/LtgSpdbBuffer.hh
        src/include/Spdb/MultiThreshBiasMapping.hh
        src/include/Spdb/PosnRpt.hh
        src/include/Spdb/Product_defines.hh
        src/include/Spdb/sounding.h
        src/include/Spdb/Sounding.hh
        src/include/Spdb/SoundingGet.hh
        src/include/Spdb/SoundingPut.hh
        src/include/Spdb/Spdb.hh
        src/include/Spdb/Spdb_typedefs.hh
        src/include/Spdb/Symprod.hh
        src/include/Spdb/Symprod_typedefs.hh
        src/include/Spdb/SymprodObj.hh
        src/include/Spdb/ThresholdBiasMapping.hh
        src/include/Spdb/WayPoint.hh
        src/include/Spdb/WxHazard.hh
        src/include/Spdb/WxHazardBuffer.hh
        src/include/Spdb/WxHazardFactory.hh
        src/DsSpdb/DsSpdb.cc
        src/DsSpdb/DsSpdbInput.cc
        src/DsSpdb/DsSpdbMsg.cc
        src/DsSpdb/DsSpdbThreaded.cc
        src/DsSymprodServer/DsSymprodServer.cc
        src/FltRoute/FltRoute.cc
        src/FltRoute/PosnRpt.cc
        src/FltRoute/WayPoint.cc
        src/ltg/LtgSpdbBuffer.cc
        src/Sounding/Sounding.cc
        src/Sounding/SoundingGet.cc
        src/Sounding/SoundingPut.cc
        src/Sounding/SoundingUtils.cc
        src/Spdb/Spdb.cc
        src/StormThresholds/MultiThreshBiasMapping.cc
        src/StormThresholds/ThresholdBiasMapping.cc
        src/Symprod/Symprod.cc
        src/Symprod/Symprod_add.cc
        src/Symprod/Symprod_be.cc
        src/Symprod/Symprod_print.cc
        src/Symprod/Symprod_transform.cc
        src/Symprod/SymprodObj.cc
        src/WxHazards/ConvRegionHazard.cc
        src/WxHazards/ConvRegionHazardExt.cc
        src/WxHazards/WxHazard.cc
        src/WxHazards/WxHazardBuffer.cc
        src/WxHazards/WxHazardFactory.cc
)
add_library(Spdb ${SOURCE_FILES})
target_include_directories(Spdb PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/rapformats/src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/rapmath/src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
        ${CMAKE_SOURCE_DIR}/libs/euclid/src/include
        ${CMAKE_SOURCE_DIR}/libs/didss/src/include
        ${CMAKE_SOURCE_DIR}/libs/dsserver/src/include
)
