set(SOURCE_FILES
        src/AcarsDataPoint/AcarsDataPoint.cc
        src/DsTrigger/DsDirListTrigger.cc
        src/DsTrigger/DsEnsembleAnyTrigger.cc
        src/DsTrigger/DsEnsembleDataTrigger.cc
        src/DsTrigger/DsEnsembleGenTrigger.cc
        src/DsTrigger/DsEnsembleLeadTrigger.cc
        src/DsTrigger/DsFcstTime.cc
        src/DsTrigger/DsFcstTimeListTrigger.cc
        src/DsTrigger/DsFileListTrigger.cc
        src/DsTrigger/DsFmqTrigger.cc
        src/DsTrigger/DsInputDirTrigger.cc
        src/DsTrigger/DsInputPathTrigger.cc
        src/DsTrigger/DsIntervalTrigger.cc
        src/DsTrigger/DsLdataIntTrigger.cc
        src/DsTrigger/DsLdataTrigger.cc
        src/DsTrigger/DsMultFcstTrigger.cc
        src/DsTrigger/DsMultInputDirTrigger.cc
        src/DsTrigger/DsMultipleTrigger.cc
        src/DsTrigger/DsMultTrigElem.cc
        src/DsTrigger/DsOneFileTrigger.cc
        src/DsTrigger/DsOneTimeTrigger.cc
        src/DsTrigger/DsSpecificFcstLdataTrigger.cc
        src/DsTrigger/DsSpecificFcstTimeListTrigger.cc
        src/DsTrigger/DsSpecificGenLdataTrigger.cc
        src/DsTrigger/DsTimeListTrigger.cc
        src/DsTrigger/DsTrigger.cc
        src/DsTrigger/DsUrlTrigger.cc
        src/DsTrigger/DsUrlTriggerArchive.cc
        src/DsTrigger/DsUrlTriggerObject.cc
        src/DsTrigger/DsUrlTriggerObjectDerived.cc
        src/DsTrigger/DsUrlTriggerRealtime.cc
        src/DsTrigger/DsUrlTriggerSubsample.cc
        src/DsTrigger/MdvTimeListHandler.cc
        src/DsTrigger/SpdbTimeListHandler.cc
        src/DsTrigger/TimeListHandler.cc
        src/DsTrigger/TriggerInfo.cc
        src/include/dsdata/AcarsDataPoint.hh
        src/include/dsdata/DsDirListTrigger.hh
        src/include/dsdata/DsEnsembleAnyTrigger.hh
        src/include/dsdata/DsEnsembleDataTrigger.hh
        src/include/dsdata/DsEnsembleGenTrigger.hh
        src/include/dsdata/DsEnsembleLeadTrigger.hh
        src/include/dsdata/DsFcstTime.hh
        src/include/dsdata/DsFcstTimeListTrigger.hh
        src/include/dsdata/DsFileListTrigger.hh
        src/include/dsdata/DsFmqTrigger.hh
        src/include/dsdata/DsInputDirTrigger.hh
        src/include/dsdata/DsInputPathTrigger.hh
        src/include/dsdata/DsIntervalTrigger.hh
        src/include/dsdata/DsLdataIntTrigger.hh
        src/include/dsdata/DsLdataTrigger.hh
        src/include/dsdata/DsMultFcstTrigger.hh
        src/include/dsdata/DsMultInputDirTrigger.hh
        src/include/dsdata/DsMultipleTrigger.hh
        src/include/dsdata/DsMultTrigElem.hh
        src/include/dsdata/DsOneFileTrigger.hh
        src/include/dsdata/DsOneTimeTrigger.hh
        src/include/dsdata/DsSpecificFcstLdataTrigger.hh
        src/include/dsdata/DsSpecificFcstTimeListTrigger.hh
        src/include/dsdata/DsSpecificGenLdataTrigger.hh
        src/include/dsdata/DsTimeListTrigger.hh
        src/include/dsdata/DsTrigger.hh
        src/include/dsdata/DsUrlTrigger.hh
        src/include/dsdata/DsUrlTriggerArchive.hh
        src/include/dsdata/DsUrlTriggerObject.hh
        src/include/dsdata/DsUrlTriggerObjectDerived.hh
        src/include/dsdata/DsUrlTriggerObjectVirtualMethods.hh
        src/include/dsdata/DsUrlTriggerRealtime.hh
        src/include/dsdata/DsUrlTriggerSubsample.hh
        src/include/dsdata/MdvTimeListHandler.hh
        src/include/dsdata/SpdbTimeListHandler.hh
        src/include/dsdata/TimeListHandler.hh
        src/include/dsdata/TriggerInfo.hh
        src/include/dsdata/Tstorm.hh
        src/include/dsdata/TstormGrid.hh
        src/include/dsdata/TstormGroup.hh
        src/include/dsdata/TstormMgr.hh
        src/Tstorm/Tstorm.cc
        src/Tstorm/TstormGrid.cc
        src/Tstorm/TstormGroup.cc
        src/Tstorm/TstormMgr.cc
)
add_library(dsdata ${SOURCE_FILES})
target_include_directories(dsdata PUBLIC
        ./src/include
        ${CMAKE_SOURCE_DIR}/libs/toolsa/src/include
        ${CMAKE_SOURCE_DIR}/libs/didss/src/include
        ${CMAKE_SOURCE_DIR}/libs/dataport/src/include
        ${CMAKE_SOURCE_DIR}/libs/dsserver/src/include
        ${CMAKE_SOURCE_DIR}/libs/Mdv/src/include
        ${CMAKE_SOURCE_DIR}/libs/euclid/src/include
        ${CMAKE_SOURCE_DIR}/libs/rapformats/src/include
        ${CMAKE_SOURCE_DIR}/libs/Spdb/src/include
        ${CMAKE_SOURCE_DIR}/libs/Fmq/src/include
        ${CMAKE_SOURCE_DIR}/libs/rapmath/src/include
)
